discussion/kv_engine/125163/125163_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-38326: Refactor magma MetaData and MagmaRequest

Move these to separate files.

This is for preparation of the real fix that needs access to
MagmaRequest to support Mock testing.

Change-Id: I5ee6575655df73e121ff0d56b54cf98108f51901

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Scott Lashley
Date: 2020-04-08 15:07:15.000000000
Message: 
Uploaded patch set 6.
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2020-04-08 15:08:34.000000000
Message: 
Patch Set 6:

(1 comment)
Line:24, engines/ep/src/magma-kvstore/magma-kvstore.h -> should be able to remove this too

----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-04-08 15:33:38.000000000
Message: 
Patch Set 6: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23456/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23456/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3042/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3042/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3051/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3051/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/10904/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3107/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3107/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1632/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:25:29: error: expected class name [clang-diagnostic-error]
class MagmaRequest : public IORequest {
                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:45:16: error: use of undeclared identifier "key" [clang-diagnostic-error]
        return key.size();
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:49:46: error: use of undeclared identifier "key" [clang-diagnostic-error]
        return reinterpret_cast<const char*>(key.data());
                                             ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1632/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:25:29:
error: expected class name [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1632/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27420/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/153/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2099/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Scott Lashley
Date: 2020-04-08 15:33:52.000000000
MISMATCHED INLINE COMMENT
Line:24, engines/ep/src/magma-kvstore/magma-kvstore.h -> Done
----------------------------------------------------------------------------------------------------------------------
